--- a/CGSSGuide/Team/View/TeamMemberTableViewCell.xib
+++ b/CGSSGuide/Team/View/TeamMemberTableViewCell.xib
@@ -8,10 +8,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TeamMemberTableViewCell" customModule="CGSSGuide" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="84"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="83.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIR-TU-f90">
@@ -20,11 +20,11 @@
                             <constraint firstAttribute="height" constant="21" id="eDm-Y4-E82"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3cP-64-FR3">
-                        <rect key="frame" x="0.0" y="26" width="400" height="57.5"/>
+                        <rect key="frame" x="0.0" y="31" width="400" height="58.5"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o1q-2o-FWH" customClass="CGSSCardIconView" customModule="CGSSGuide" customModuleProvider="target">
                                 <rect key="frame" x="10" y="0.0" width="48" height="48"/>
@@ -34,67 +34,71 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技能等级:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34w-V9-N1E">
-                                <rect key="frame" x="282" y="0.0" width="62" height="21"/>
+                                <rect key="frame" x="278" y="0.0" width="62" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="62" id="doP-eD-KD5"/>
-                                    <constraint firstAttribute="height" constant="21" id="n1T-Uv-gf2"/>
+                                    <constraint firstAttribute="height" constant="18" id="n1T-Uv-gf2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技能:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RtF-Ry-o2d">
-                                <rect key="frame" x="68" y="0.0" width="34" height="21"/>
+                                <rect key="frame" x="68" y="0.0" width="34" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="34" id="3xN-Ra-c0o"/>
-                                    <constraint firstAttribute="height" constant="21" id="VT5-tT-cv0"/>
+                                    <constraint firstAttribute="height" constant="18" id="VT5-tT-cv0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUw-Sk-Uso">
-                                <rect key="frame" x="68" y="21" width="322" height="30"/>
+                                <rect key="frame" x="68" y="18" width="322" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Mlo-0S-LeR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="10" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uyz-8o-bjr">
-                                <rect key="frame" x="354" y="0.0" width="36" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="JeA-FH-E8L"/>
-                                    <constraint firstAttribute="width" constant="36" id="raZ-Gb-agd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EqD-ub-3FT">
-                                <rect key="frame" x="110" y="0.0" width="35.5" height="21"/>
+                                <rect key="frame" x="110" y="0.0" width="35.5" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="OPU-i7-mak"/>
+                                    <constraint firstAttribute="height" constant="18" id="OPU-i7-mak"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="10" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s7M-LP-pJL">
+                                <rect key="frame" x="345" y="0.0" width="45" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="8N9-7T-F9X"/>
+                                    <constraint firstAttribute="height" constant="18" id="WQC-St-cMS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="levelFieldBegin:" destination="KGk-i7-Jjw" eventType="editingDidBegin" id="Cdd-hT-7gL"/>
+                                    <action selector="levelFieldDone:" destination="KGk-i7-Jjw" eventType="editingDidEndOnExit" id="i5q-p1-OCF"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="EqD-ub-3FT" firstAttribute="leading" secondItem="RtF-Ry-o2d" secondAttribute="trailing" constant="8" id="0cr-KE-F7I"/>
                             <constraint firstItem="RtF-Ry-o2d" firstAttribute="leading" secondItem="o1q-2o-FWH" secondAttribute="trailing" constant="10" id="0eD-Id-9kK"/>
-                            <constraint firstItem="uyz-8o-bjr" firstAttribute="leading" secondItem="34w-V9-N1E" secondAttribute="trailing" constant="10" id="1zD-FN-X3M"/>
+                            <constraint firstAttribute="trailing" secondItem="s7M-LP-pJL" secondAttribute="trailing" constant="10" id="6ng-jG-igG"/>
                             <constraint firstAttribute="trailing" secondItem="lUw-Sk-Uso" secondAttribute="trailing" constant="10" id="Bz9-kO-tgu"/>
                             <constraint firstItem="lUw-Sk-Uso" firstAttribute="top" secondItem="RtF-Ry-o2d" secondAttribute="bottom" id="FDM-B3-GZt"/>
                             <constraint firstItem="EqD-ub-3FT" firstAttribute="top" secondItem="3cP-64-FR3" secondAttribute="top" id="QwZ-hj-ile"/>
                             <constraint firstItem="o1q-2o-FWH" firstAttribute="leading" secondItem="3cP-64-FR3" secondAttribute="leading" constant="10" id="TMA-J4-21y"/>
                             <constraint firstItem="RtF-Ry-o2d" firstAttribute="top" secondItem="3cP-64-FR3" secondAttribute="top" id="XJz-2Y-TzD"/>
                             <constraint firstItem="lUw-Sk-Uso" firstAttribute="leading" secondItem="o1q-2o-FWH" secondAttribute="trailing" constant="10" id="fFw-Ud-ZjQ"/>
-                            <constraint firstAttribute="trailing" secondItem="uyz-8o-bjr" secondAttribute="trailing" constant="10" id="fbZ-mP-7ms"/>
+                            <constraint firstItem="s7M-LP-pJL" firstAttribute="leading" secondItem="34w-V9-N1E" secondAttribute="trailing" constant="5" id="iQu-jl-Zf2"/>
                             <constraint firstItem="34w-V9-N1E" firstAttribute="top" secondItem="3cP-64-FR3" secondAttribute="top" id="jXb-G0-Lus"/>
-                            <constraint firstItem="uyz-8o-bjr" firstAttribute="top" secondItem="3cP-64-FR3" secondAttribute="top" id="jfm-8x-ecX"/>
+                            <constraint firstItem="s7M-LP-pJL" firstAttribute="top" secondItem="3cP-64-FR3" secondAttribute="top" id="kKu-zV-MR7"/>
                             <constraint firstItem="o1q-2o-FWH" firstAttribute="top" secondItem="3cP-64-FR3" secondAttribute="top" id="lEO-02-dH7"/>
                         </constraints>
                     </view>
@@ -113,13 +117,13 @@
                             <constraint firstAttribute="height" constant="21" id="kom-0z-xWO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="3cP-64-FR3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="CJx-2a-wxE"/>
-                    <constraint firstItem="3cP-64-FR3" firstAttribute="top" secondItem="oKx-6K-wql" secondAttribute="bottom" id="L3v-4V-e6k"/>
+                    <constraint firstItem="3cP-64-FR3" firstAttribute="top" secondItem="oKx-6K-wql" secondAttribute="bottom" constant="5" id="L3v-4V-e6k"/>
                     <constraint firstAttribute="bottom" secondItem="3cP-64-FR3" secondAttribute="bottom" id="LVE-bT-KRz"/>
                     <constraint firstItem="xIR-TU-f90" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="UIB-1f-uRj"/>
                     <constraint firstItem="t4l-ZY-5Er" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Wvb-3W-QQB"/>
@@ -136,7 +140,7 @@
                 <outlet property="icon" destination="o1q-2o-FWH" id="ikS-Ul-UOL"/>
                 <outlet property="skillDesc" destination="lUw-Sk-Uso" id="D6g-EN-Viw"/>
                 <outlet property="skillName" destination="EqD-ub-3FT" id="2Zr-PG-cEA"/>
-                <outlet property="skilllevel" destination="uyz-8o-bjr" id="YcW-My-hKJ"/>
+                <outlet property="skilllevel" destination="s7M-LP-pJL" id="9uT-fW-8ar"/>
                 <outlet property="title" destination="oKx-6K-wql" id="wk6-yk-nVi"/>
             </connections>
         </tableViewCell>
