程序图标和启动页面

--- a/CGSSGuide/Base.lproj/LaunchScreen.storyboard
+++ b/CGSSGuide/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,28 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="1uR-j5-4ZV">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="9Fz-FD-mdV"/>
+                                    <constraint firstAttribute="height" constant="200" id="wHK-Mw-gFQ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CGSSGuide" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dS6-HJ-T7d">
+                                <rect key="frame" x="255" y="408" width="90" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1uR-j5-4ZV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0bt-Dw-x9r"/>
+                            <constraint firstItem="dS6-HJ-T7d" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Jy8-8t-lRF"/>
+                            <constraint firstItem="1uR-j5-4ZV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="dpQ-Dq-MNg"/>
+                            <constraint firstItem="dS6-HJ-T7d" firstAttribute="top" secondItem="1uR-j5-4ZV" secondAttribute="bottom" constant="8" id="qvh-1A-msk"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +45,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="1.jpg" width="1024" height="1024"/>
+    </resources>
 </document>
