--- a/CGSSGuide/Base.lproj/Main.storyboard
+++ b/CGSSGuide/Base.lproj/Main.storyboard
@@ -476,11 +476,41 @@ Cg
                         <segue destination="KxG-H5-NIc" kind="relationship" relationship="viewControllers" id="9Po-cc-mal"/>
                         <segue destination="IyO-O4-iMn" kind="relationship" relationship="viewControllers" id="vi5-tW-gH1"/>
                         <segue destination="Lc3-lA-ZOL" kind="relationship" relationship="viewControllers" id="umc-cu-3CW"/>
+                        <segue destination="sAv-Q2-aG8" kind="relationship" relationship="viewControllers" id="YK7-1L-5Ya"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aSz-SK-JmE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-5894" y="-574"/>
+        </scene>
+        <!--工具-->
+        <scene sceneID="8P3-YV-X5h">
+            <objects>
+                <tableViewController title="工具" id="08b-yF-FVx" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="kTP-1s-QKZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="SQf-YJ-ZYU">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SQf-YJ-ZYU" id="Iqa-Gp-dbH">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="08b-yF-FVx" id="8yc-8Y-GPW"/>
+                            <outlet property="delegate" destination="08b-yF-FVx" id="xbl-d9-GB8"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="zeC-Rh-4X6"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cxK-iM-5Qj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4453" y="918"/>
         </scene>
         <!--组队-->
         <scene sceneID="4om-XR-tsE">
@@ -575,7 +605,7 @@ ZXQ</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gDG-8v-yLM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2775" y="945"/>
+            <point key="canvasLocation" x="-1683" y="1009"/>
         </scene>
         <!--卡片筛选和排序-->
         <scene sceneID="QZt-3R-LJz">
@@ -1076,12 +1106,33 @@ ZXQ</string>
             </objects>
             <point key="canvasLocation" x="-3594" y="-565.99999999999989"/>
         </scene>
+        <!--工具-->
+        <scene sceneID="x9V-Lw-SAR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sAv-Q2-aG8" customClass="BaseNavigationController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="工具" image="741-box.png" selectedImage="741-box-selected.png" id="wJt-PI-tVQ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="B0B-4S-3iD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="08b-yF-FVx" kind="relationship" relationship="rootViewController" id="TxQ-lt-fTR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9YH-eO-fG8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-5265" y="918"/>
+        </scene>
     </scenes>
     <resources>
         <image name="726-star-selected.png" width="28" height="26"/>
         <image name="726-star.png" width="28" height="26"/>
         <image name="740-gear-selected.png" width="28" height="28"/>
         <image name="740-gear.png" width="28" height="28"/>
+        <image name="741-box-selected.png" width="28" height="26"/>
+        <image name="741-box.png" width="28" height="26"/>
         <image name="779-users-selected.png" width="28" height="25"/>
         <image name="779-users.png" width="28" height="25"/>
         <image name="898-music-note-selected.png" width="28" height="28"/>
