--- a/CGSSGuide/Base.lproj/Main.storyboard
+++ b/CGSSGuide/Base.lproj/Main.storyboard
@@ -506,7 +506,7 @@ Cg
                             <outlet property="delegate" destination="08b-yF-FVx" id="xbl-d9-GB8"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="zeC-Rh-4X6"/>
+                    <navigationItem key="navigationItem" title="实用工具" id="zeC-Rh-4X6"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxK-iM-5Qj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1110,7 +1110,7 @@ ZXQ</string>
         <scene sceneID="x9V-Lw-SAR">
             <objects>
                 <navigationController title="工具导航" automaticallyAdjustsScrollViewInsets="NO" id="sAv-Q2-aG8" customClass="BaseNavigationController" customModule="CGSSGuide" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="工具" image="741-box.png" selectedImage="741-box-selected.png" id="wJt-PI-tVQ"/>
+                    <tabBarItem key="tabBarItem" title="工具" image="921-toolbox.png" selectedImage="921-toolbox-selected.png" id="wJt-PI-tVQ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="B0B-4S-3iD">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1131,11 +1131,11 @@ ZXQ</string>
         <image name="726-star.png" width="28" height="26"/>
         <image name="740-gear-selected.png" width="28" height="28"/>
         <image name="740-gear.png" width="28" height="28"/>
-        <image name="741-box-selected.png" width="28" height="26"/>
-        <image name="741-box.png" width="28" height="26"/>
         <image name="779-users-selected.png" width="28" height="25"/>
         <image name="779-users.png" width="28" height="25"/>
         <image name="898-music-note-selected.png" width="28" height="28"/>
         <image name="898-music-note.png" width="28" height="28"/>
+        <image name="921-toolbox-selected.png" width="28" height="22"/>
+        <image name="921-toolbox.png" width="28" height="22"/>
     </resources>
 </document>
